[fix] 12012024 -- fix minor layout issues

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -12,5 +12,6 @@
   padding: 0 1.4em;
   display: flex;
   flex-flow: column;
+  min-height: 100vh;
 }
 
